# artcode

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  aliases.js  release.toml  search-index.js  settings.html  source-files.js
artcode/: all.html  constant.BASE.html  constant.CHARACTERS.html  fn.encode.html  fn.main.html  index.html  sidebar-items.js  struct.BatDate.html
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  main.rs
src/artcode/: main.rs.html
