[package]
name = "artcode"
version = "1.3.0"
authors = ["Grayson <me@russellhay.com>"]
edition = "2018"
license = "MIT"
description = "Converts dates into artcode coordinates"
repository = "https://github.com/RussTheAerialist/artcode"

[dependencies]
clap = "2.33.0"
chrono = "0.4.10"

[dev-dependencies]
cargo-release = "0.13.0"
