[package]
name = "artcode"
version = "2.0.0"
authors = ["Grayson <russell.hay@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Converts dates into artcode coordinates"
repository = "https://github.com/graysonarts/artcode"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0"

[dev-dependencies]
cargo-release = "0"
